--- a/ScrapingGithubTopicsRepositories.ipynb
+++ b/ScrapingGithubTopicsRepositories.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cd11f590",
    "metadata": {},
    "outputs": [],
@@ -159,21 +159,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fbbbc675",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "titles = get_topic_titles(doc)\n",
     "len(titles)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ecb901df",
+   "metadata": {},
+   "source": [
+    "Example of scraped list of titles."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1ab7f482",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3D', 'Ajax', 'Algorithm', 'Amp', 'Android']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "titles[:5]"
    ]
@@ -191,12 +221,12 @@
    "id": "a22ad349",
    "metadata": {},
    "source": [
-    "Extracting the topic descriptions: example and  instance demonstration"
+    "###### Extracting the topic descriptions: Function code and  instance demonstration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "120128f3",
    "metadata": {},
    "outputs": [],
@@ -212,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4e26005c",
    "metadata": {},
    "outputs": [],
@@ -221,11 +251,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55f859c6",
+   "metadata": {},
+   "source": [
+    "Example of scraped descriptions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "77da9d1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3D refers to the use of three-dimensional graphics, modeling, and animation in various industries.',\n",
+       " 'Ajax is a technique for creating interactive web applications.',\n",
+       " 'Algorithms are self-contained sequences that carry out a variety of tasks.',\n",
+       " 'Amp is a non-blocking concurrency library for PHP.',\n",
+       " 'Android is an operating system built by Google designed for mobile devices.']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "description[:5]"
    ]
@@ -235,12 +288,12 @@
    "id": "3a5bd9d4",
    "metadata": {},
    "source": [
-    "Extracting the topic Urls: example and instance demonstration"
+    "###### Extracting the topic Urls: Function code and  instance demonstration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b8963eff",
    "metadata": {},
    "outputs": [],
@@ -256,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "eea6cffc",
    "metadata": {},
    "outputs": [],
@@ -265,13 +318,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7b1330b",
+   "metadata": {},
+   "source": [
+    "Example of scraped topic urls"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "99a252f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://github.com/topics/3d',\n",
+       " 'https://github.com/topics/ajax',\n",
+       " 'https://github.com/topics/algorithm',\n",
+       " 'https://github.com/topics/amphp',\n",
+       " 'https://github.com/topics/android']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "links[:3]"
+    "links[:5]"
    ]
   },
   {
@@ -279,12 +355,12 @@
    "id": "1370d789",
    "metadata": {},
    "source": [
-    "#### Combining the above Titles, Descriptions and Urls functions"
+    "#### Combining the above Titles, Descriptions and Urls into a single function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8a788ffb",
    "metadata": {},
    "outputs": [],
@@ -294,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "1a41795d",
    "metadata": {},
    "outputs": [],
@@ -309,9 +385,116 @@
     "        'description': get_topic_descs(doc),\n",
     "        'url': get_topic_urls(doc)\n",
     "    }\n",
-    "    topics_df = pd.DataFrame(topics_dict)\n",
-    "    return topics_df"
+    "    return pd.DataFrame(topics_dict)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "046ebeae",
+   "metadata": {},
+   "source": [
+    "Let's print the DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "579b191e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>description</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3D</td>\n",
+       "      <td>3D refers to the use of three-dimensional grap...</td>\n",
+       "      <td>https://github.com/topics/3d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ajax</td>\n",
+       "      <td>Ajax is a technique for creating interactive w...</td>\n",
+       "      <td>https://github.com/topics/ajax</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algorithm</td>\n",
+       "      <td>Algorithms are self-contained sequences that c...</td>\n",
+       "      <td>https://github.com/topics/algorithm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Amp</td>\n",
+       "      <td>Amp is a non-blocking concurrency library for ...</td>\n",
+       "      <td>https://github.com/topics/amphp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Android</td>\n",
+       "      <td>Android is an operating system built by Google...</td>\n",
+       "      <td>https://github.com/topics/android</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       title                                        description  \\\n",
+       "0         3D  3D refers to the use of three-dimensional grap...   \n",
+       "1       Ajax  Ajax is a technique for creating interactive w...   \n",
+       "2  Algorithm  Algorithms are self-contained sequences that c...   \n",
+       "3        Amp  Amp is a non-blocking concurrency library for ...   \n",
+       "4    Android  Android is an operating system built by Google...   \n",
+       "\n",
+       "                                   url  \n",
+       "0         https://github.com/topics/3d  \n",
+       "1       https://github.com/topics/ajax  \n",
+       "2  https://github.com/topics/algorithm  \n",
+       "3      https://github.com/topics/amphp  \n",
+       "4    https://github.com/topics/android  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scrape_topics().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea9751c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -323,15 +506,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5edeadf7",
+   "id": "246d639e",
    "metadata": {},
    "source": [
-    "#### TO_DO: Extract a topic"
+    "#### TO_DO:\n",
+    "- Lets now extract a topic from the topics_url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "7af9d063",
    "metadata": {},
    "outputs": [],
@@ -349,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea4dfb8d",
+   "id": "b54d5d29",
    "metadata": {},
    "source": [
     "Example."
@@ -357,8 +541,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "37556391",
+   "execution_count": 38,
+   "id": "1af500a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,17 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f062f7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc.find_all('h3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44b505a9",
+   "id": "5c902ac2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -386,23 +560,126 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "365a3adc",
+   "id": "aea591bd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c6259f4a",
+   "id": "291bf41b",
    "metadata": {},
    "source": [
-    "#### TO_DO: return h3 text from the topic extracted in the doc above"
+    "#### TO_DO: \n",
+    "- Scrape and return stars earned in the topic extracted\n",
+    "- Convert the stars to an integer\n",
+    "- Scrape and return h3 text from the topic extracted in the doc above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b48546f8",
+   "metadata": {},
+   "source": [
+    "Let's first scrape the number of stars for each repository "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f3540827",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "star_tags = doc.find_all('span', id='repo-stars-counter-star')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ea87a805",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(star_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "12c21e3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'97.7k'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "star_tags[0].text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "135f8946",
+   "metadata": {},
+   "source": [
+    "Lets convert the  stars to a defined number, specifically of integer type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a0fca5a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_star_count(stars_str):\n",
+    "    stars_str = stars_str.strip()\n",
+    "    if stars_str[-1]== 'k': #if the last element is eqal to k\n",
+    "        return int(float(stars_str[:-1])*1000) # we remove the last element using stars_str[:-1]\n",
+    "    return int(stars_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "39616e76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97700\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(parse_star_count(star_tags[0].text))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c90bb9a6",
+   "id": "cc9d4bf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3316038c",
+   "id": "89e918bc",
    "metadata": {},
    "source": [
     "Example"
@@ -429,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67d81c6f",
+   "id": "150a30f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -437,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "414a0394",
+   "id": "405a005f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -445,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ded49752",
+   "id": "5a72b477",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed07182e",
+   "id": "0ba4e0a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -486,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c605a9ca",
+   "id": "0401e55f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db4a996e",
+   "id": "ca378222",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "419e1089",
+   "id": "b95ad008",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -520,14 +797,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06fb2039",
+   "id": "177f196c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "e825c1c8",
+   "id": "0fe6817b",
    "metadata": {},
    "source": [
     "### Summary \n",
@@ -539,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5f5c5da",
+   "id": "b701082a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d2f9c3a",
+   "id": "d1e31573",
    "metadata": {},
    "source": [
     "Let's run it to scrape the top repos for all the topics in the first page of https://github.com/topics"
@@ -564,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f20d7ad",
+   "id": "bc7d9bc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dd84163",
+   "id": "e3d7b444",
    "metadata": {},
    "outputs": [],
    "source": []
