--- a/ScrapingGithubTopicsRepositories.ipynb
+++ b/ScrapingGithubTopicsRepositories.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "fbbbc675",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "30"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "1ab7f482",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "['3D', 'Ajax', 'Algorithm', 'Amp', 'Android']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "120128f3",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "4e26005c",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "77da9d1f",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        " 'Android is an operating system built by Google designed for mobile devices.']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "b8963eff",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "eea6cffc",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "99a252f6",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
        " 'https://github.com/topics/android']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "8a788ffb",
    "metadata": {},
    "outputs": [],
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "1a41795d",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "579b191e",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "4    https://github.com/topics/android  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "7af9d063",
    "metadata": {},
    "outputs": [],
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "1af500a3",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
     "#### TO_DO: \n",
     "- Scrape and return stars earned in the topic extracted\n",
     "- Convert the stars to an integer\n",
-    "- Scrape and return h3 text from the topic extracted in the doc above"
+    "- Create a function that returns all the required information about a repository\n"
    ]
   },
   {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "f3540827",
    "metadata": {},
    "outputs": [],
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "ea87a805",
    "metadata": {},
    "outputs": [
@@ -606,7 +606,7 @@
        "20"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "12c21e3f",
    "metadata": {},
    "outputs": [
@@ -627,7 +627,7 @@
        "'97.7k'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "a0fca5a2",
    "metadata": {},
    "outputs": [],
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "39616e76",
    "metadata": {},
    "outputs": [
@@ -677,19 +677,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aacd2068",
+   "metadata": {},
+   "source": [
+    "Lets now create a function that returns all the required information about a repository"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "cc9d4bf9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def get_rep_info(h3_tag, star_tag):\n",
     "    #returns all the required information about a repository\n",
     "    a_tags = h3_tag.find_all('a')\n",
     "    username = a_tags[0].text.strip()\n",
     "    repo_name = a_tags[1].text.strip()\n",
+    "    base_url = \"https://github.com\"\n",
     "    repo_url = base_url + a_tags[1]['href']\n",
     "    stars = parse_star_count(star_tag.text.strip())\n",
     "    return username, repo_name, stars, repo_url"
@@ -700,39 +707,89 @@
    "id": "89e918bc",
    "metadata": {},
    "source": [
-    "Example"
+    "Testing function with scraped instances"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "150a30f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "405a005f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "h3_selection_class = 'f3 color-fg-muted text-normal lh-condensed'\n",
+    "repo_tags = doc.find_all('h3', {'class':h3_selection_class} )"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "id": "5c6ca4b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<h3 class=\"f3 color-fg-muted text-normal lh-condensed\">\n",
+       "<a class=\"Link\" data-hydro-click='{\"event_type\":\"explore.click\",\"payload\":{\"click_context\":\"REPOSITORY_CARD\",\"click_target\":\"OWNER\",\"click_visual_representation\":\"REPOSITORY_OWNER_HEADING\",\"actor_id\":null,\"record_id\":97088,\"originating_url\":\"https://github.com/topics/3d\",\"user_id\":null}}' data-hydro-click-hmac=\"c72fbd5c69a8ee7c9c53a4e65de2b93c8fc7552dd793945819639bc165c0f0ba\" data-turbo=\"false\" data-view-component=\"true\" href=\"/mrdoob\">\n",
+       "            mrdoob\n",
+       "</a>          /\n",
+       "          <a class=\"Link text-bold wb-break-word\" data-hydro-click='{\"event_type\":\"explore.click\",\"payload\":{\"click_context\":\"REPOSITORY_CARD\",\"click_target\":\"REPOSITORY\",\"click_visual_representation\":\"REPOSITORY_NAME_HEADING\",\"actor_id\":null,\"record_id\":576201,\"originating_url\":\"https://github.com/topics/3d\",\"user_id\":null}}' data-hydro-click-hmac=\"4a2667db3d63a1739c412e059e5da95afe419df83f70949b5d59dc3478f5c79a\" data-turbo=\"false\" data-view-component=\"true\" href=\"/mrdoob/three.js\">\n",
+       "            three.js\n",
+       "</a> </h3>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repo_tags[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "150a30f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('mrdoob', 'three.js', 97700, 'https://github.com/mrdoob/three.js')"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_rep_info(repo_tags[0], star_tags[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8093b8f",
+   "metadata": {},
+   "source": [
+    "Now lets combine all code written above into a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "5a72b477",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def get_topic_repos(topic_doc):\n",
+    "def get_topic_repos(doc):\n",
     "    # Get the h3 tags containing repo title, repo URL and username\n",
     "    h3_selection_class = 'f3 color-fg-muted text-normal lh-condensed'\n",
-    "    repo_tags = topic_doc.find_all('h3', {'class':h3_selection_class} )\n",
+    "    repo_tags = doc.find_all('h3', {'class':h3_selection_class} )\n",
     "     # Get star tags\n",
-    "    star_tags = topic_doc.find_all('span', id='repo-stars-counter-star')\n",
+    "    star_tags = doc.find_all('span', id='repo-stars-counter-star')\n",
     "    \n",
     "    topic_repos_dict = {\n",
     "        'username':[],\n",
@@ -741,7 +798,7 @@
     "        'repo_url':[]\n",
     "        }\n",
     "    \n",
-    "    # Get repo info\n",
+    "    # using a for loop to get repo info\n",
     "    for i in range (len(repo_tags)):\n",
     "        repo_info = get_rep_info(repo_tags[i], star_tags[i])\n",
     "        topic_repos_dict['username'].append(repo_info[0])\n",
@@ -753,9 +810,160 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7a6fa71f",
+   "metadata": {},
+   "source": [
+    "Testing function with the scraped instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "9aca4830",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>username</th>\n",
+       "      <th>repo_name</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>repo_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>mrdoob</td>\n",
+       "      <td>three.js</td>\n",
+       "      <td>97700</td>\n",
+       "      <td>https://github.com/mrdoob/three.js</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pmndrs</td>\n",
+       "      <td>react-three-fiber</td>\n",
+       "      <td>25400</td>\n",
+       "      <td>https://github.com/pmndrs/react-three-fiber</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>libgdx</td>\n",
+       "      <td>libgdx</td>\n",
+       "      <td>22500</td>\n",
+       "      <td>https://github.com/libgdx/libgdx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BabylonJS</td>\n",
+       "      <td>Babylon.js</td>\n",
+       "      <td>22100</td>\n",
+       "      <td>https://github.com/BabylonJS/Babylon.js</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ssloy</td>\n",
+       "      <td>tinyrenderer</td>\n",
+       "      <td>19000</td>\n",
+       "      <td>https://github.com/ssloy/tinyrenderer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>FreeCAD</td>\n",
+       "      <td>FreeCAD</td>\n",
+       "      <td>16900</td>\n",
+       "      <td>https://github.com/FreeCAD/FreeCAD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>lettier</td>\n",
+       "      <td>3d-game-shaders-for-beginners</td>\n",
+       "      <td>16800</td>\n",
+       "      <td>https://github.com/lettier/3d-game-shaders-for...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>aframevr</td>\n",
+       "      <td>aframe</td>\n",
+       "      <td>16000</td>\n",
+       "      <td>https://github.com/aframevr/aframe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CesiumGS</td>\n",
+       "      <td>cesium</td>\n",
+       "      <td>11600</td>\n",
+       "      <td>https://github.com/CesiumGS/cesium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>blender</td>\n",
+       "      <td>blender</td>\n",
+       "      <td>11000</td>\n",
+       "      <td>https://github.com/blender/blender</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    username                      repo_name  stars  \\\n",
+       "0     mrdoob                       three.js  97700   \n",
+       "1     pmndrs              react-three-fiber  25400   \n",
+       "2     libgdx                         libgdx  22500   \n",
+       "3  BabylonJS                     Babylon.js  22100   \n",
+       "4      ssloy                   tinyrenderer  19000   \n",
+       "5    FreeCAD                        FreeCAD  16900   \n",
+       "6    lettier  3d-game-shaders-for-beginners  16800   \n",
+       "7   aframevr                         aframe  16000   \n",
+       "8   CesiumGS                         cesium  11600   \n",
+       "9    blender                        blender  11000   \n",
+       "\n",
+       "                                            repo_url  \n",
+       "0                 https://github.com/mrdoob/three.js  \n",
+       "1        https://github.com/pmndrs/react-three-fiber  \n",
+       "2                   https://github.com/libgdx/libgdx  \n",
+       "3            https://github.com/BabylonJS/Babylon.js  \n",
+       "4              https://github.com/ssloy/tinyrenderer  \n",
+       "5                 https://github.com/FreeCAD/FreeCAD  \n",
+       "6  https://github.com/lettier/3d-game-shaders-for...  \n",
+       "7                 https://github.com/aframevr/aframe  \n",
+       "8                 https://github.com/CesiumGS/cesium  \n",
+       "9                 https://github.com/blender/blender  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_topic_repos(doc).head(10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ba4e0a8",
+   "id": "769538a3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -763,6 +971,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "63de21b5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "0401e55f",
    "metadata": {},
    "outputs": [],
@@ -772,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "ca378222",
    "metadata": {},
    "outputs": [],
